// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Headline component  Render component 1`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  font-style: normal;
  margin: 0;
  line-height: var(--pbl-theme-typography-h2-lineHeight);
  font-size: var(--pbl-theme-typography-h2-fontSize);
  margin-bottom: var(--pbl-theme-typography-h2-marginBottom);
  font-weight: var(--pbl-theme-typography-h2-fontWeight);
}

<div>
  <h2
    class="emotion-0"
  >
    Hello
  </h2>
</div>
`;

exports[`InfoText component  Render component 1`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  font-style: normal;
  margin: 0;
  line-height: var(--pbl-theme-typography-body-lineHeight);
  font-size: var(--pbl-theme-typography-body-fontSize);
  margin-bottom: var(--pbl-theme-typography-body-marginBottom);
  font-weight: var(--pbl-theme-typography-body-variants-bold-fontWeight);
  font-size: var(--pbl-theme-typography-body-variants-small-fontSize);
}

.emotion-0 variants bold {
  font-weight: var(--pbl-theme-typography-body-variants-bold-fontWeight);
}

.emotion-0 variants small {
  font-size: var(--pbl-theme-typography-body-variants-small-fontSize);
}

<div>
  <p
    class="emotion-0"
  >
    Hello
  </p>
</div>
`;

exports[`Paragraph component  Render component 1`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  font-style: normal;
  margin: 0;
  line-height: var(--pbl-theme-typography-body-lineHeight);
  font-size: var(--pbl-theme-typography-body-fontSize);
  margin-bottom: var(--pbl-theme-typography-body-marginBottom);
}

.emotion-0 variants bold {
  font-weight: var(--pbl-theme-typography-body-variants-bold-fontWeight);
}

.emotion-0 variants small {
  font-size: var(--pbl-theme-typography-body-variants-small-fontSize);
}

<div>
  <p
    class="emotion-0"
  >
    Hello
  </p>
</div>
`;

exports[`ParagraphBold component  Render component 1`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  font-style: normal;
  margin: 0;
  line-height: var(--pbl-theme-typography-body-lineHeight);
  font-size: var(--pbl-theme-typography-body-fontSize);
  margin-bottom: var(--pbl-theme-typography-body-marginBottom);
  font-weight: var(--pbl-theme-typography-body-variants-bold-fontWeight);
}

.emotion-0 variants bold {
  font-weight: var(--pbl-theme-typography-body-variants-bold-fontWeight);
}

.emotion-0 variants small {
  font-size: var(--pbl-theme-typography-body-variants-small-fontSize);
}

<div>
  <p
    class="emotion-0"
  >
    Hello
  </p>
</div>
`;

exports[`Subtitle component  Render component 1`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  font-style: normal;
  margin: 0;
  line-height: var(--pbl-theme-typography-h4-lineHeight);
  font-size: var(--pbl-theme-typography-h4-fontSize);
  margin-bottom: var(--pbl-theme-typography-h4-marginBottom);
  font-weight: var(--pbl-theme-typography-h4-fontWeight);
}

<div>
  <h4
    class="emotion-0"
  >
    Hello
  </h4>
</div>
`;

exports[`Title component  Render component 1`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  font-style: normal;
  margin: 0;
  line-height: var(--pbl-theme-typography-h3-lineHeight);
  font-size: var(--pbl-theme-typography-h3-fontSize);
  font-weight: var(--pbl-theme-typography-h3-fontWeight);
  margin-bottom: var(--pbl-theme-typography-h3-marginBottom);
}

<div>
  <h3
    class="emotion-0"
  >
    Hello
  </h3>
</div>
`;

exports[`Typography component with variant body Render component 1`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  font-style: normal;
  margin: 0;
  line-height: var(--pbl-theme-typography-body-lineHeight);
  font-size: var(--pbl-theme-typography-body-fontSize);
  margin-bottom: var(--pbl-theme-typography-body-marginBottom);
}

.emotion-0 variants bold {
  font-weight: var(--pbl-theme-typography-body-variants-bold-fontWeight);
}

.emotion-0 variants small {
  font-size: var(--pbl-theme-typography-body-variants-small-fontSize);
}

<div>
  <p
    class="emotion-0"
  >
    Hello
  </p>
</div>
`;

exports[`Typography component with variant body Render component 2`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  font-style: normal;
  margin: 0;
  line-height: var(--pbl-theme-typography-body-lineHeight);
  font-size: var(--pbl-theme-typography-body-fontSize);
  margin-bottom: var(--pbl-theme-typography-body-marginBottom);
  font-weight: var(--pbl-theme-typography-body-variants-bold-fontWeight);
}

.emotion-0 variants bold {
  font-weight: var(--pbl-theme-typography-body-variants-bold-fontWeight);
}

.emotion-0 variants small {
  font-size: var(--pbl-theme-typography-body-variants-small-fontSize);
}

<div>
  <p
    class="emotion-0"
  >
    Hello
  </p>
</div>
`;

exports[`Typography component with variant body Render component 3`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  font-style: normal;
  margin: 0;
  line-height: var(--pbl-theme-typography-body-lineHeight);
  font-size: var(--pbl-theme-typography-body-fontSize);
  margin-bottom: var(--pbl-theme-typography-body-marginBottom);
  font-size: var(--pbl-theme-typography-body-variants-small-fontSize);
}

.emotion-0 variants bold {
  font-weight: var(--pbl-theme-typography-body-variants-bold-fontWeight);
}

.emotion-0 variants small {
  font-size: var(--pbl-theme-typography-body-variants-small-fontSize);
}

<div>
  <p
    class="emotion-0"
  >
    Hello
  </p>
</div>
`;

exports[`Typography component with variant body Render component 4`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  font-style: normal;
  margin: 0;
  line-height: var(--pbl-theme-typography-body-lineHeight);
  font-size: var(--pbl-theme-typography-body-fontSize);
  margin-bottom: var(--pbl-theme-typography-body-marginBottom);
  font-weight: var(--pbl-theme-typography-body-variants-bold-fontWeight);
  font-size: var(--pbl-theme-typography-body-variants-small-fontSize);
}

.emotion-0 variants bold {
  font-weight: var(--pbl-theme-typography-body-variants-bold-fontWeight);
}

.emotion-0 variants small {
  font-size: var(--pbl-theme-typography-body-variants-small-fontSize);
}

<div>
  <p
    class="emotion-0"
  >
    Hello
  </p>
</div>
`;

exports[`Typography component with variant body Render inline component 1`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  font-style: normal;
  margin: 0;
  line-height: var(--pbl-theme-typography-body-lineHeight);
  font-size: var(--pbl-theme-typography-body-fontSize);
  margin-bottom: var(--pbl-theme-typography-body-marginBottom);
  margin-bottom: 0;
}

.emotion-0 variants bold {
  font-weight: var(--pbl-theme-typography-body-variants-bold-fontWeight);
}

.emotion-0 variants small {
  font-size: var(--pbl-theme-typography-body-variants-small-fontSize);
}

<div>
  <p
    class="emotion-0"
  >
    Hello
  </p>
</div>
`;

exports[`Typography component with variant body Render inline component 2`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  font-style: normal;
  margin: 0;
  line-height: var(--pbl-theme-typography-body-lineHeight);
  font-size: var(--pbl-theme-typography-body-fontSize);
  margin-bottom: var(--pbl-theme-typography-body-marginBottom);
  margin-bottom: 0;
  font-weight: var(--pbl-theme-typography-body-variants-bold-fontWeight);
}

.emotion-0 variants bold {
  font-weight: var(--pbl-theme-typography-body-variants-bold-fontWeight);
}

.emotion-0 variants small {
  font-size: var(--pbl-theme-typography-body-variants-small-fontSize);
}

<div>
  <p
    class="emotion-0"
  >
    Hello
  </p>
</div>
`;

exports[`Typography component with variant body Render inline component 3`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  font-style: normal;
  margin: 0;
  line-height: var(--pbl-theme-typography-body-lineHeight);
  font-size: var(--pbl-theme-typography-body-fontSize);
  margin-bottom: var(--pbl-theme-typography-body-marginBottom);
  margin-bottom: 0;
  font-size: var(--pbl-theme-typography-body-variants-small-fontSize);
}

.emotion-0 variants bold {
  font-weight: var(--pbl-theme-typography-body-variants-bold-fontWeight);
}

.emotion-0 variants small {
  font-size: var(--pbl-theme-typography-body-variants-small-fontSize);
}

<div>
  <p
    class="emotion-0"
  >
    Hello
  </p>
</div>
`;

exports[`Typography component with variant body Render inline component 4`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  font-style: normal;
  margin: 0;
  line-height: var(--pbl-theme-typography-body-lineHeight);
  font-size: var(--pbl-theme-typography-body-fontSize);
  margin-bottom: var(--pbl-theme-typography-body-marginBottom);
  margin-bottom: 0;
  font-weight: var(--pbl-theme-typography-body-variants-bold-fontWeight);
  font-size: var(--pbl-theme-typography-body-variants-small-fontSize);
}

.emotion-0 variants bold {
  font-weight: var(--pbl-theme-typography-body-variants-bold-fontWeight);
}

.emotion-0 variants small {
  font-size: var(--pbl-theme-typography-body-variants-small-fontSize);
}

<div>
  <p
    class="emotion-0"
  >
    Hello
  </p>
</div>
`;

exports[`Typography component with variant button Render component 1`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  font-style: normal;
  margin: 0;
  line-height: var(--pbl-theme-typography-button-lineHeight);
  font-size: var(--pbl-theme-typography-button-fontSize);
  margin-bottom: var(--pbl-theme-typography-button-marginBottom);
}

.emotion-0 variants small {
  font-size: var(--pbl-theme-typography-button-variants-small-fontSize);
  font-weight: var(--pbl-theme-typography-button-variants-small-fontWeight);
}

<div>
  <p
    class="emotion-0"
  >
    Hello
  </p>
</div>
`;

exports[`Typography component with variant button Render component 2`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  font-style: normal;
  margin: 0;
  line-height: var(--pbl-theme-typography-button-lineHeight);
  font-size: var(--pbl-theme-typography-button-fontSize);
  margin-bottom: var(--pbl-theme-typography-button-marginBottom);
  font-size: var(--pbl-theme-typography-button-variants-small-fontSize);
  font-weight: var(--pbl-theme-typography-button-variants-small-fontWeight);
}

.emotion-0 variants small {
  font-size: var(--pbl-theme-typography-button-variants-small-fontSize);
  font-weight: var(--pbl-theme-typography-button-variants-small-fontWeight);
}

<div>
  <p
    class="emotion-0"
  >
    Hello
  </p>
</div>
`;

exports[`Typography component with variant button Render inline component 1`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  font-style: normal;
  margin: 0;
  line-height: var(--pbl-theme-typography-button-lineHeight);
  font-size: var(--pbl-theme-typography-button-fontSize);
  margin-bottom: var(--pbl-theme-typography-button-marginBottom);
  margin-bottom: 0;
}

.emotion-0 variants small {
  font-size: var(--pbl-theme-typography-button-variants-small-fontSize);
  font-weight: var(--pbl-theme-typography-button-variants-small-fontWeight);
}

<div>
  <p
    class="emotion-0"
  >
    Hello
  </p>
</div>
`;

exports[`Typography component with variant button Render inline component 2`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  font-style: normal;
  margin: 0;
  line-height: var(--pbl-theme-typography-button-lineHeight);
  font-size: var(--pbl-theme-typography-button-fontSize);
  margin-bottom: var(--pbl-theme-typography-button-marginBottom);
  margin-bottom: 0;
  font-size: var(--pbl-theme-typography-button-variants-small-fontSize);
  font-weight: var(--pbl-theme-typography-button-variants-small-fontWeight);
}

.emotion-0 variants small {
  font-size: var(--pbl-theme-typography-button-variants-small-fontSize);
  font-weight: var(--pbl-theme-typography-button-variants-small-fontWeight);
}

<div>
  <p
    class="emotion-0"
  >
    Hello
  </p>
</div>
`;

exports[`Typography component with variant h1 Render component 1`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  font-style: normal;
  margin: 0;
  line-height: var(--pbl-theme-typography-h1-lineHeight);
  font-size: var(--pbl-theme-typography-h1-fontSize);
  margin-bottom: var(--pbl-theme-typography-h1-marginBottom);
  font-weight: var(--pbl-theme-typography-h1-fontWeight);
}

<div>
  <h1
    class="emotion-0"
  >
    Hello
  </h1>
</div>
`;

exports[`Typography component with variant h1 Render inline component 1`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  font-style: normal;
  margin: 0;
  line-height: var(--pbl-theme-typography-h1-lineHeight);
  font-size: var(--pbl-theme-typography-h1-fontSize);
  margin-bottom: var(--pbl-theme-typography-h1-marginBottom);
  font-weight: var(--pbl-theme-typography-h1-fontWeight);
  margin-bottom: 0;
}

<div>
  <h1
    class="emotion-0"
  >
    Hello
  </h1>
</div>
`;

exports[`Typography component with variant h2 Render component 1`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  font-style: normal;
  margin: 0;
  line-height: var(--pbl-theme-typography-h2-lineHeight);
  font-size: var(--pbl-theme-typography-h2-fontSize);
  margin-bottom: var(--pbl-theme-typography-h2-marginBottom);
  font-weight: var(--pbl-theme-typography-h2-fontWeight);
}

<div>
  <h2
    class="emotion-0"
  >
    Hello
  </h2>
</div>
`;

exports[`Typography component with variant h2 Render inline component 1`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  font-style: normal;
  margin: 0;
  line-height: var(--pbl-theme-typography-h2-lineHeight);
  font-size: var(--pbl-theme-typography-h2-fontSize);
  margin-bottom: var(--pbl-theme-typography-h2-marginBottom);
  font-weight: var(--pbl-theme-typography-h2-fontWeight);
  margin-bottom: 0;
}

<div>
  <h2
    class="emotion-0"
  >
    Hello
  </h2>
</div>
`;

exports[`Typography component with variant h3 Render component 1`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  font-style: normal;
  margin: 0;
  line-height: var(--pbl-theme-typography-h3-lineHeight);
  font-size: var(--pbl-theme-typography-h3-fontSize);
  font-weight: var(--pbl-theme-typography-h3-fontWeight);
  margin-bottom: var(--pbl-theme-typography-h3-marginBottom);
}

<div>
  <h3
    class="emotion-0"
  >
    Hello
  </h3>
</div>
`;

exports[`Typography component with variant h3 Render inline component 1`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  font-style: normal;
  margin: 0;
  line-height: var(--pbl-theme-typography-h3-lineHeight);
  font-size: var(--pbl-theme-typography-h3-fontSize);
  font-weight: var(--pbl-theme-typography-h3-fontWeight);
  margin-bottom: var(--pbl-theme-typography-h3-marginBottom);
  margin-bottom: 0;
}

<div>
  <h3
    class="emotion-0"
  >
    Hello
  </h3>
</div>
`;

exports[`Typography component with variant h4 Render component 1`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  font-style: normal;
  margin: 0;
  line-height: var(--pbl-theme-typography-h4-lineHeight);
  font-size: var(--pbl-theme-typography-h4-fontSize);
  margin-bottom: var(--pbl-theme-typography-h4-marginBottom);
  font-weight: var(--pbl-theme-typography-h4-fontWeight);
}

<div>
  <h4
    class="emotion-0"
  >
    Hello
  </h4>
</div>
`;

exports[`Typography component with variant h4 Render inline component 1`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  font-style: normal;
  margin: 0;
  line-height: var(--pbl-theme-typography-h4-lineHeight);
  font-size: var(--pbl-theme-typography-h4-fontSize);
  margin-bottom: var(--pbl-theme-typography-h4-marginBottom);
  font-weight: var(--pbl-theme-typography-h4-fontWeight);
  margin-bottom: 0;
}

<div>
  <h4
    class="emotion-0"
  >
    Hello
  </h4>
</div>
`;

exports[`Typography component with variant undefined Render component 1`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  font-style: normal;
  margin: 0;
  line-height: var(--pbl-theme-typography-body-lineHeight);
  font-size: var(--pbl-theme-typography-body-fontSize);
  margin-bottom: var(--pbl-theme-typography-body-marginBottom);
}

.emotion-0 variants bold {
  font-weight: var(--pbl-theme-typography-body-variants-bold-fontWeight);
}

.emotion-0 variants small {
  font-size: var(--pbl-theme-typography-body-variants-small-fontSize);
}

<div>
  <p
    class="emotion-0"
  >
    Hello
  </p>
</div>
`;

exports[`Typography component with variant undefined Render component 2`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  font-style: normal;
  margin: 0;
  line-height: var(--pbl-theme-typography-body-lineHeight);
  font-size: var(--pbl-theme-typography-body-fontSize);
  margin-bottom: var(--pbl-theme-typography-body-marginBottom);
  font-weight: var(--pbl-theme-typography-body-variants-bold-fontWeight);
}

.emotion-0 variants bold {
  font-weight: var(--pbl-theme-typography-body-variants-bold-fontWeight);
}

.emotion-0 variants small {
  font-size: var(--pbl-theme-typography-body-variants-small-fontSize);
}

<div>
  <p
    class="emotion-0"
  >
    Hello
  </p>
</div>
`;

exports[`Typography component with variant undefined Render component 3`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  font-style: normal;
  margin: 0;
  line-height: var(--pbl-theme-typography-body-lineHeight);
  font-size: var(--pbl-theme-typography-body-fontSize);
  margin-bottom: var(--pbl-theme-typography-body-marginBottom);
  font-weight: var(--pbl-theme-typography-body-variants-bold-fontWeight);
  font-size: var(--pbl-theme-typography-body-variants-small-fontSize);
}

.emotion-0 variants bold {
  font-weight: var(--pbl-theme-typography-body-variants-bold-fontWeight);
}

.emotion-0 variants small {
  font-size: var(--pbl-theme-typography-body-variants-small-fontSize);
}

<div>
  <p
    class="emotion-0"
  >
    Hello
  </p>
</div>
`;

exports[`Typography component with variant undefined Render inline component 1`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  font-style: normal;
  margin: 0;
  line-height: var(--pbl-theme-typography-body-lineHeight);
  font-size: var(--pbl-theme-typography-body-fontSize);
  margin-bottom: var(--pbl-theme-typography-body-marginBottom);
  margin-bottom: 0;
}

.emotion-0 variants bold {
  font-weight: var(--pbl-theme-typography-body-variants-bold-fontWeight);
}

.emotion-0 variants small {
  font-size: var(--pbl-theme-typography-body-variants-small-fontSize);
}

<div>
  <p
    class="emotion-0"
  >
    Hello
  </p>
</div>
`;

exports[`Typography component with variant undefined Render inline component 2`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  font-style: normal;
  margin: 0;
  line-height: var(--pbl-theme-typography-body-lineHeight);
  font-size: var(--pbl-theme-typography-body-fontSize);
  margin-bottom: var(--pbl-theme-typography-body-marginBottom);
  margin-bottom: 0;
  font-weight: var(--pbl-theme-typography-body-variants-bold-fontWeight);
}

.emotion-0 variants bold {
  font-weight: var(--pbl-theme-typography-body-variants-bold-fontWeight);
}

.emotion-0 variants small {
  font-size: var(--pbl-theme-typography-body-variants-small-fontSize);
}

<div>
  <p
    class="emotion-0"
  >
    Hello
  </p>
</div>
`;

exports[`Typography component with variant undefined Render inline component 3`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  font-style: normal;
  margin: 0;
  line-height: var(--pbl-theme-typography-body-lineHeight);
  font-size: var(--pbl-theme-typography-body-fontSize);
  margin-bottom: var(--pbl-theme-typography-body-marginBottom);
  margin-bottom: 0;
  font-weight: var(--pbl-theme-typography-body-variants-bold-fontWeight);
  font-size: var(--pbl-theme-typography-body-variants-small-fontSize);
}

.emotion-0 variants bold {
  font-weight: var(--pbl-theme-typography-body-variants-bold-fontWeight);
}

.emotion-0 variants small {
  font-size: var(--pbl-theme-typography-body-variants-small-fontSize);
}

<div>
  <p
    class="emotion-0"
  >
    Hello
  </p>
</div>
`;
